Bug 255211 - [IFC][line-box-contain] line-height should not affect enclosing height
Summary: [IFC][line-box-contain] line-height should not affect enclosing height
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-09 20:03 PDT by zalan
Modified: 2023-04-10 16:53 PDT (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (4.41 KB, patch)
2023-04-09 20:08 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-04-09 20:03:47 PDT
ssia
Comment 1 zalan 2023-04-09 20:08:10 PDT
Created attachment 465825 [details]
[fast-cq]Patch
Comment 2 EWS 2023-04-10 07:42:40 PDT
Committed 262768@main (afa7e183e513): <https://commits.webkit.org/262768@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465825 [details].
Comment 3 Radar WebKit Bug Importer 2023-04-10 07:43:17 PDT
<rdar://problem/107832246>