[IFC][line-box-contain] line-height should not affect enclosing height https://bugs.webkit.org/show_bug.cgi?id=255211

Reviewed by Antti Koivisto.

Layout bounds geometry takes line-height into account potentially causing overlapping content
while line-box-contain (by definition) should always produce non-overlapping content.

* LayoutTests/fast/inline/line-box-contain-with-line-height-expected.html: Added.
* LayoutTests/fast/inline/line-box-contain-with-line-height.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::adjustInlineBoxHeightsForLineBoxContainIfApplicable):

Canonical link: https://commits.webkit.org/262768@main